--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Udemy-Clone
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:/TjzyhwcOOueeyqfSLCdtPTkWnRxfp6JlRIxXgRlRc0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
